# blue-ocean-python

./: .gitignore  Flake8WarningsParser  Jenkinsfile  README.md  pylintrc  requirements.txt  setup.cfg  setup.py
app/: __init__.py  __main__.py
docker/: Dockerfile
jenkins_sample.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/units/: test_joke.py
