[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude = tests/*
output-file=/reports/flake8.log

[nosetests]
verbosity=1
nologcapture=1
detailed-errors=1
with-doctest=1
with-xunit=1
with-spec=1
spec-color=1
with-coverage=1
cover-erase=1
cover-package=app
xunit-file=/reports/tests.xml
html-file=/reports/tests.html
tests=tests
xcoverage-file=/reports/coverage.xml

[coverage:run]
include =
    app/*
source=
    app
omit=
    */__init__.py

concurrency=
    multiprocessing

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

precision = 3