[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude = tests/*
output-file=report/flake8.log
ignore = F821,F407 #undefined_name,__future__

[bandit]
bandit_recurse = True
bandit_exclude = tests/*

[tool:pytest]
addopts = -v -l -ra
          --junitxml=report/tests.xml
          --cov=app
          --cov-report html:report/html
          --cov-report xml:report/coverage.xml
          --cov-report term
          --flake8 --bandit

[coverage:run]
include =
    app/*
source=
    app
omit=
    */__init__.py

concurrency=
    multiprocessing

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

precision = 3