[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[bandit]
bandit_recurse = True
bandit_exclude = tests/*

[tool:pytest]
addopts = -v -l -ra
          --junitxml=report/tests.xml
          --cov=app
          --cov-report html:report/html
          --cov-report xml:report/coverage.xml
          --cov-report term
          --bandit

[coverage:run]
include =
    app/*
source=
    app
omit=
    */__init__.py

concurrency=
    multiprocessing

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

precision = 3